# arq-dashboard

./: .pre-commit-config.yaml  Containerfile  LICENSE  README.md  build_frontend.sh  compose.yml  pyproject.toml
.github/workflows/: build.yaml  test.yml
arq_dashboard/: __init__.py  dependencies.py  errors.py  main.py  queue.py  utils.py
arq_dashboard/api/: api.py
arq_dashboard/api/endpoints/: functions.py  jobs.py  queues.py  stats.py
arq_dashboard/core/: datastructures.py  settings.py
arq_dashboard/frontend/: index.html
arq_dashboard/frontend/assets/: index.5c3f7c7a.css  index.86adf8cc.js
arq_dashboard/frontend/css/: app.47c267f0.css  app.fe92836c.css  chunk-vendors.3a8565a7.css
arq_dashboard/frontend/js/: app.d07a7e2b.js  app.d07a7e2b.js.map  app.ec3a003e.js  app.ec3a003e.js.map  chunk-vendors.ee1af17c.js
arq_dashboard/schemas/: __init__.py  api_model.py  function.py  job.py  mixins.py  pagination.py  queue.py
tests/: conftest.py  settings.py  test_queue.py
tests/api/: test_functions.py  test_jobs.py  test_queues.py  test_stats.py
