[tool.poetry]
name = "arq_dashboard"
version = "0.1.4"
description = "A dashboard for ARQ built with FastAPI"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ninoseki/arq-dashboard"
repository = "https://github.com/ninoseki/arq-dashboard"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiometer = "^0.3.0"
arq = "^0.24"
arrow = "^1.2.3"
async-cache = "^1.1.1"
fastapi = "^0.85.1"
loguru = "^0.6.0"
pyhumps = "^3.7.3"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
aiohttp = "^3.8.3"
autoflake = "^1.7.6"
autopep8 = "^1.6.0"
black = "^22.10.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.982"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.5"
pyupgrade = "^3.1.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
